--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/JUGALMEHRA958/csvmaster#readme",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.2.4",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
 }
